# mrkt_screener

./: .gitignore  .gitmodules  README.md  Screening_Stocks.ipynb  app.py  hello.py  lib.py  main.py  market_sentiment.py  neomerc.csv  pyproject.toml  requirements.txt  tickers copy 2.csv  tickers copy.csv  tickers.csv
analysis/: __init__.py  lib.py  market_profile.py  metrics.py  news_sentiment.py
data/: fear_greed_indicator.py  fetcher.py  news_research.py  tickers.csv  tickers_all.csv  tickers_yf_fetcher.py
lib/: data_fetching.py  market_analysis.py  metrics_handling.py  news_analysis.py  plotting.py  utils.py
presentation/: candle_charts.py  charts.py  dashboard.py  fear_greed_chart.py  metrics_display.py  pe_chart.py  sidebar.py  styles.py  vix_chart.py
reporting/: __init__.py  reporting.py
utils/: __init__.py  cache.py  helpers.py  logger.py
visualization/: __init__.py  charts.py
